# Mailpile

./: .bowerrc  .coveragerc  .dockerignore  .gitignore  .gitmodules  .travis.yml  AGPLv3.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  COPYING.md  Contributors.md  DEV_FAQ.md  Dockerfile  Dockerfile.dev  Gruntfile.js  IDEAS.md  LICENSE-2.0.txt  MANIFEST.in  MEM-STATS.TXT  Makefile  README.md  Repair Corrupt Exchange Mailboxes  Vagrantfile  Windows Wiki.md  ant-designs?organization=oscarg933&organization=oscarg933  babel.cfg  bower.json  clear-cache.sh  default-theme  docker-compose.dev.yml  docker-compose.yml  external-plugins  fig.yml  ideas.txt  indie.json  install_hooks.py  locale  mailpile-gui.py  mailpile.py  mp  (+18 more)
.reuse/: dep5
.tx/: config
debian/: Dockerfile  control  mailpile.links  rules
doc/: Debian-packaging.md  FRONT-END.md  IDEAS.md  SECURITY-NOTES.md  URLS.md  Windows.md  config.md  defaults.cfg  fscons2011.txt  json_urlmap.txt  kraum2011-12-15.html  layout.md
lib/: gui_o_matic
locale/: mailpile.pot
mailpile/: __init__.py  __main__.py  app.py  auth.py  command_cache.py  commands.py  config.py  conn_brokers.py  contacts.py  cryptostate.py  defaults.py  eventlog.py  gpgi.py  httpd.py  i18n.py  imap_mailbox.py  jinjaextensions.py  jsontemplate.py  macmail_mailbox.py  mail_generator.py  mail_source.py  mailutils.py  openssl.py  packing.py  pgpmime.py  platforms.py  postinglist.py  safe_popen.py  search.py  search_history.py  security.py  smtp_client.py  symencrypt.py  ui.py  ui_old.py  urlmap.py  util.py  vcard.py  vfs.py  workers.py
scripts/: breeder.py  (+30 more)
(+1284 files in other folders)
