[metadata]
name = mailpile
license = AGPLv3+
author = Mailpile ehf.
author_email = team@mailpile.is
url = https://www.mailpile.is/
summary = An e-mail search engine and webmail client, with easy encryption and privacy.
description-file = README.md
classifier = 
    Development Status :: 4 - Beta
    Programming Language :: Python :: 2.7
    Programming Language :: JavaScript
    License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
    Intended Audience :: End Users/Desktop
    Topic :: Communications :: Email :: Email Clients (MUA)
    Topic :: Security :: Cryptography
    Operating System :: POSIX
    Environment :: Console
    Environment :: Web Environment
keywords =
    email
    webmail
    search
    pgp

[files]
packages = mailpile
data_files =
    share/mailpile = shared-data/*

[entry_points]
console_scripts =
    mailpile = mailpile.__main__:main

[global]
setup-hooks =
    install_hooks.symlink_develop
